project/interpret/parser/GraphParser.py
# Generated from project/task11/parser/Graph.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class GraphParser(Parser):
    grammarFileName = "Graph.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'let'",
        "'is'",
        "'graph'",
        "'remove'",
        "'where'",
        "'reachable'",
        "'return'",
        "'by'",
        "'vertex'",
        "'edge'",
        "'vertices'",
        "'from'",
        "'add'",
        "'to'",
        "'for'",
        "'in'",
        "'='",
        "'['",
        "'('",
        "']'",
        "')'",
        "','",
        "'^'",
        "'.'",
        "'&'",
        "'..'",
        "'|'",
    ]

    symbolicNames = [
        "<INVALID>",
        "LET",
        "IS",
        "GRAPH",
        "REMOVE",
        "WHERE",
        "REACHABLE",
        "RETURN",
        "BY",
        "VERTEX",
        "EDGE",
        "VERTICES",
        "FROM",
        "ADD",
        "TO",
        "FOR",
        "IN",
        "EQUAL",
        "L_SQ_BRACKET",
        "L_PARENTHESIS",
        "R_SQ_BRACKET",
        "R_PARENTHESIS",
        "COMMA",
        "CIRCUMFLEX",
        "DOT",
        "AMPERSAND",
        "ELLIPSIS",
        "PIPE",
        "VAR_ID",
        "NUM",
        "CHAR",
        "WS",
    ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_declare = 2
    RULE_bind = 3
    RULE_remove = 4
    RULE_add = 5
    RULE_expr = 6
    RULE_set_expr = 7
    RULE_edge_expr = 8
    RULE_regexp = 9
    RULE_term = 10
    RULE_factor = 11
    RULE_primary = 12
    RULE_range = 13
    RULE_select = 14
    RULE_v_filter = 15
    RULE_num = 16
    RULE_char = 17
    RULE_var = 18

    ruleNames = [
        "prog",
        "stmt",
        "declare",
        "bind",
        "remove",
        "add",
        "expr",
        "set_expr",
        "edge_expr",
        "regexp",
        "term",
        "factor",
        "primary",
        "range",
        "select",
        "v_filter",
        "num",
        "char",
        "var",
    ]

    EOF = Token.EOF
    LET = 1
    IS = 2
    GRAPH = 3
    REMOVE = 4
    WHERE = 5
    REACHABLE = 6
    RETURN = 7
    BY = 8
    VERTEX = 9
    EDGE = 10
    VERTICES = 11
    FROM = 12
    ADD = 13
    TO = 14
    FOR = 15
    IN = 16
    EQUAL = 17
    L_SQ_BRACKET = 18
    L_PARENTHESIS = 19
    R_SQ_BRACKET = 20
    R_PARENTHESIS = 21
    COMMA = 22
    CIRCUMFLEX = 23
    DOT = 24
    AMPERSAND = 25
    ELLIPSIS = 26
    PIPE = 27
    VAR_ID = 28
    NUM = 29
    CHAR = 30
    WS = 31

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.StmtContext)
            else:
                return self.getTypedRuleContext(GraphParser.StmtContext, i)

        def getRuleIndex(self):
            return GraphParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

    def prog(self):
        localctx = GraphParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 8210) != 0:
                self.state = 38
                self.stmt()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bind(self):
            return self.getTypedRuleContext(GraphParser.BindContext, 0)

        def add(self):
            return self.getTypedRuleContext(GraphParser.AddContext, 0)

        def remove(self):
            return self.getTypedRuleContext(GraphParser.RemoveContext, 0)

        def declare(self):
            return self.getTypedRuleContext(GraphParser.DeclareContext, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)

    def stmt(self):
        localctx = GraphParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.bind()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.add()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.remove()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.declare()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclareContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(GraphParser.LET, 0)

        def var(self):
            return self.getTypedRuleContext(GraphParser.VarContext, 0)

        def IS(self):
            return self.getToken(GraphParser.IS, 0)

        def GRAPH(self):
            return self.getToken(GraphParser.GRAPH, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_declare

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeclare"):
                listener.enterDeclare(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDeclare"):
                listener.exitDeclare(self)

    def declare(self):
        localctx = GraphParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(GraphParser.LET)
            self.state = 51
            self.var()
            self.state = 52
            self.match(GraphParser.IS)
            self.state = 53
            self.match(GraphParser.GRAPH)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BindContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(GraphParser.LET, 0)

        def var(self):
            return self.getTypedRuleContext(GraphParser.VarContext, 0)

        def EQUAL(self):
            return self.getToken(GraphParser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(GraphParser.ExprContext, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_bind

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBind"):
                listener.enterBind(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBind"):
                listener.exitBind(self)

    def bind(self):
        localctx = GraphParser.BindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(GraphParser.LET)
            self.state = 56
            self.var()
            self.state = 57
            self.match(GraphParser.EQUAL)
            self.state = 58
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RemoveContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REMOVE(self):
            return self.getToken(GraphParser.REMOVE, 0)

        def expr(self):
            return self.getTypedRuleContext(GraphParser.ExprContext, 0)

        def FROM(self):
            return self.getToken(GraphParser.FROM, 0)

        def var(self):
            return self.getTypedRuleContext(GraphParser.VarContext, 0)

        def VERTEX(self):
            return self.getToken(GraphParser.VERTEX, 0)

        def EDGE(self):
            return self.getToken(GraphParser.EDGE, 0)

        def VERTICES(self):
            return self.getToken(GraphParser.VERTICES, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_remove

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRemove"):
                listener.enterRemove(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRemove"):
                listener.exitRemove(self)

    def remove(self):
        localctx = GraphParser.RemoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_remove)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(GraphParser.REMOVE)
            self.state = 61
            _la = self._input.LA(1)
            if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 3584) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 62
            self.expr()
            self.state = 63
            self.match(GraphParser.FROM)
            self.state = 64
            self.var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AddContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(GraphParser.ADD, 0)

        def expr(self):
            return self.getTypedRuleContext(GraphParser.ExprContext, 0)

        def TO(self):
            return self.getToken(GraphParser.TO, 0)

        def var(self):
            return self.getTypedRuleContext(GraphParser.VarContext, 0)

        def VERTEX(self):
            return self.getToken(GraphParser.VERTEX, 0)

        def EDGE(self):
            return self.getToken(GraphParser.EDGE, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_add

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAdd"):
                listener.enterAdd(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAdd"):
                listener.exitAdd(self)

    def add(self):
        localctx = GraphParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_add)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(GraphParser.ADD)
            self.state = 67
            _la = self._input.LA(1)
            if not (_la == 9 or _la == 10):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 68
            self.expr()
            self.state = 69
            self.match(GraphParser.TO)
            self.state = 70
            self.var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def num(self):
            return self.getTypedRuleContext(GraphParser.NumContext, 0)

        def char(self):
            return self.getTypedRuleContext(GraphParser.CharContext, 0)

        def var(self):
            return self.getTypedRuleContext(GraphParser.VarContext, 0)

        def edge_expr(self):
            return self.getTypedRuleContext(GraphParser.Edge_exprContext, 0)

        def set_expr(self):
            return self.getTypedRuleContext(GraphParser.Set_exprContext, 0)

        def regexp(self):
            return self.getTypedRuleContext(GraphParser.RegexpContext, 0)

        def select(self):
            return self.getTypedRuleContext(GraphParser.SelectContext, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

    def expr(self):
        localctx = GraphParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.num()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.char()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.var()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.edge_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.set_expr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.regexp()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 78
                self.select()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Set_exprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_SQ_BRACKET(self):
            return self.getToken(GraphParser.L_SQ_BRACKET, 0)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.ExprContext)
            else:
                return self.getTypedRuleContext(GraphParser.ExprContext, i)

        def R_SQ_BRACKET(self):
            return self.getToken(GraphParser.R_SQ_BRACKET, 0)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(GraphParser.COMMA)
            else:
                return self.getToken(GraphParser.COMMA, i)

        def getRuleIndex(self):
            return GraphParser.RULE_set_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSet_expr"):
                listener.enterSet_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSet_expr"):
                listener.exitSet_expr(self)

    def set_expr(self):
        localctx = GraphParser.Set_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_set_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(GraphParser.L_SQ_BRACKET)
            self.state = 82
            self.expr()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 22:
                self.state = 83
                self.match(GraphParser.COMMA)
                self.state = 84
                self.expr()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(GraphParser.R_SQ_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Edge_exprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_PARENTHESIS(self):
            return self.getToken(GraphParser.L_PARENTHESIS, 0)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.ExprContext)
            else:
                return self.getTypedRuleContext(GraphParser.ExprContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(GraphParser.COMMA)
            else:
                return self.getToken(GraphParser.COMMA, i)

        def R_PARENTHESIS(self):
            return self.getToken(GraphParser.R_PARENTHESIS, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_edge_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEdge_expr"):
                listener.enterEdge_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEdge_expr"):
                listener.exitEdge_expr(self)

    def edge_expr(self):
        localctx = GraphParser.Edge_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edge_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(GraphParser.L_PARENTHESIS)
            self.state = 93
            self.expr()
            self.state = 94
            self.match(GraphParser.COMMA)
            self.state = 95
            self.expr()
            self.state = 96
            self.match(GraphParser.COMMA)
            self.state = 97
            self.expr()
            self.state = 98
            self.match(GraphParser.R_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.TermContext)
            else:
                return self.getTypedRuleContext(GraphParser.TermContext, i)

        def PIPE(self, i: int = None):
            if i is None:
                return self.getTokens(GraphParser.PIPE)
            else:
                return self.getToken(GraphParser.PIPE, i)

        def getRuleIndex(self):
            return GraphParser.RULE_regexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRegexp"):
                listener.enterRegexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRegexp"):
                listener.exitRegexp(self)

    def regexp(self):
        localctx = GraphParser.RegexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_regexp)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.term()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 27:
                self.state = 101
                self.match(GraphParser.PIPE)
                self.state = 102
                self.term()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.FactorContext)
            else:
                return self.getTypedRuleContext(GraphParser.FactorContext, i)

        def DOT(self, i: int = None):
            if i is None:
                return self.getTokens(GraphParser.DOT)
            else:
                return self.getToken(GraphParser.DOT, i)

        def AMPERSAND(self, i: int = None):
            if i is None:
                return self.getTokens(GraphParser.AMPERSAND)
            else:
                return self.getToken(GraphParser.AMPERSAND, i)

        def getRuleIndex(self):
            return GraphParser.RULE_term

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTerm"):
                listener.enterTerm(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTerm"):
                listener.exitTerm(self)

    def term(self):
        localctx = GraphParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_term)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.factor()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 24 or _la == 25:
                self.state = 109
                _la = self._input.LA(1)
                if not (_la == 24 or _la == 25):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 110
                self.factor()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self):
            return self.getTypedRuleContext(GraphParser.PrimaryContext, 0)

        def CIRCUMFLEX(self, i: int = None):
            if i is None:
                return self.getTokens(GraphParser.CIRCUMFLEX)
            else:
                return self.getToken(GraphParser.CIRCUMFLEX, i)

        def range_(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.RangeContext)
            else:
                return self.getTypedRuleContext(GraphParser.RangeContext, i)

        def getRuleIndex(self):
            return GraphParser.RULE_factor

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFactor"):
                listener.enterFactor(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFactor"):
                listener.exitFactor(self)

    def factor(self):
        localctx = GraphParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_factor)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.primary()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 23:
                self.state = 117
                self.match(GraphParser.CIRCUMFLEX)
                self.state = 118
                self.range_()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimaryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def char(self):
            return self.getTypedRuleContext(GraphParser.CharContext, 0)

        def var(self):
            return self.getTypedRuleContext(GraphParser.VarContext, 0)

        def L_PARENTHESIS(self):
            return self.getToken(GraphParser.L_PARENTHESIS, 0)

        def regexp(self):
            return self.getTypedRuleContext(GraphParser.RegexpContext, 0)

        def R_PARENTHESIS(self):
            return self.getToken(GraphParser.R_PARENTHESIS, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_primary

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrimary"):
                listener.enterPrimary(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrimary"):
                listener.exitPrimary(self)

    def primary(self):
        localctx = GraphParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primary)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.char()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.var()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(GraphParser.L_PARENTHESIS)
                self.state = 127
                self.regexp()
                self.state = 128
                self.match(GraphParser.R_PARENTHESIS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RangeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_SQ_BRACKET(self):
            return self.getToken(GraphParser.L_SQ_BRACKET, 0)

        def num(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.NumContext)
            else:
                return self.getTypedRuleContext(GraphParser.NumContext, i)

        def ELLIPSIS(self):
            return self.getToken(GraphParser.ELLIPSIS, 0)

        def R_SQ_BRACKET(self):
            return self.getToken(GraphParser.R_SQ_BRACKET, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_range

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRange"):
                listener.enterRange(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRange"):
                listener.exitRange(self)

    def range_(self):
        localctx = GraphParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_range)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(GraphParser.L_SQ_BRACKET)
            self.state = 133
            self.num()
            self.state = 134
            self.match(GraphParser.ELLIPSIS)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 29:
                self.state = 135
                self.num()

            self.state = 138
            self.match(GraphParser.R_SQ_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(GraphParser.RETURN, 0)

        def var(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.VarContext)
            else:
                return self.getTypedRuleContext(GraphParser.VarContext, i)

        def WHERE(self):
            return self.getToken(GraphParser.WHERE, 0)

        def REACHABLE(self):
            return self.getToken(GraphParser.REACHABLE, 0)

        def FROM(self):
            return self.getToken(GraphParser.FROM, 0)

        def IN(self):
            return self.getToken(GraphParser.IN, 0)

        def BY(self):
            return self.getToken(GraphParser.BY, 0)

        def expr(self):
            return self.getTypedRuleContext(GraphParser.ExprContext, 0)

        def v_filter(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.V_filterContext)
            else:
                return self.getTypedRuleContext(GraphParser.V_filterContext, i)

        def COMMA(self):
            return self.getToken(GraphParser.COMMA, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_select

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelect"):
                listener.enterSelect(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelect"):
                listener.exitSelect(self)

    def select(self):
        localctx = GraphParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_select)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                self.state = 140
                self.v_filter()

            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 15:
                self.state = 143
                self.v_filter()

            self.state = 146
            self.match(GraphParser.RETURN)
            self.state = 147
            self.var()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 22:
                self.state = 148
                self.match(GraphParser.COMMA)
                self.state = 149
                self.var()

            self.state = 152
            self.match(GraphParser.WHERE)
            self.state = 153
            self.var()
            self.state = 154
            self.match(GraphParser.REACHABLE)
            self.state = 155
            self.match(GraphParser.FROM)
            self.state = 156
            self.var()
            self.state = 157
            self.match(GraphParser.IN)
            self.state = 158
            self.var()
            self.state = 159
            self.match(GraphParser.BY)
            self.state = 160
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class V_filterContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(GraphParser.FOR, 0)
